asma3 ajouti space f title page hhhhhhhhh

--- a/PFE/latex/titlepage.tex
+++ b/PFE/latex/titlepage.tex
@@ -52,8 +52,8 @@
     2021 / 2022
 
     \hspace{0.2in}
-    \large{\textbf{Spécialité \, :}  Technologie de l'information}
-    % Ingénierie du Logiciel et Traitement de l'Information}
+    \large{\textbf{Spécialité \, :}  Technologie de l'information / }\\
+    .\hspace{1.55in}\large{Ingénierie du Logiciel et Traitement de l'Information}
 
     \begin{center}
         \begin{large}
