fixed watershed citation

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -127,6 +127,13 @@ year   = {2022},
 url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/}
 }
 
+@article{Steve_Eddins_2022_mathworks,
+	author	={Steve Eddins},
+	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB & Simulink},
+	year	={2022},
+	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html}
+	}
+
 @article{VGG-Gaudenz_Boesch,
 author = {Gaudenz Boesch},
 title  = {VGG Very Deep Convolutional Networks (VGGNet) - What you need to know - viso.ai},
