fixed watershed bibtex reference typo & character

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -19,148 +19,7 @@ isbn="978-3-030-44584-3"
 	title	={JiangxiTecom Biochemistry Equipment Co., Ltd., Hematology Analyzers Biochemistry Analyzers Reagents},
 	year	={2022},
 	url	={https://en.tecom-cn.com/}
-	}@article{AITypes-GeeksForGeeks,
-author = {GeeksForGeeks},
-title	 = {Supervised and Unsupervised learning - GeeksforGeeks},
-year	 = {2022},
-url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
-}
-@article{Annie_Stuart_What_2022_webmd,
-	author	={Annie Stuart What},
-	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
-	year	={2022},
-	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
-}
-
-@ONLINE {BCCD_Dataset,
-    author = "Shenggan",
-    title  = "BCCD Dataset",
-    year   = "2017",
-    url    = "https://github.com/Shenggan/BCCD_Dataset"
-}
-
-@article{CBC-mayoclinic,
-author = {mayoclinic},
-title	 = {Complete blood count (CBC) - Mayo Clinic},
-year	 = {2022},
-url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
-}
-
-@article{CNN-IBM,
-	author	={IBM},
-	title	={What are Convolutional Neural Networks? | IBM},
-	year	={2020},
-	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
-	}@article{DG-ml-cheatsheet,
-author = {ml-cheatsheet},
-title	 = {Gradient Descent — ML Glossary documentation},
-year	 = {2022},
-url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html}
-}
-
-@Article{Kouzehkanan2022,
-author={Kouzehkanan, Zahra Mousavi
-and Saghari, Sepehr
-and Tavakoli, Sajad
-and Rostami, Peyman
-and Abaszadeh, Mohammadjavad
-and Mirzadeh, Farzaneh
-and Satlsar, Esmaeil Shahabi
-and Gheidishahran, Maryam
-and Gorgi, Fatemeh
-and Mohammadi, Saeed
-and Hosseini, Reshad},
-title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
-journal={Scientific Reports},
-year={2022},
-month={Jan},
-day={21},
-volume={12},
-number={1},
-pages={1123},
-abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
-issn={2045-2322},
-doi={10.1038/s41598-021-04426-x},
-url={https://doi.org/10.1038/s41598-021-04426-x}
-}
-
-@article{LR-GeeksForGeeks,
-author = {LR-GeeksForGeeks},
-title	 = {ML | Linear Regression - GeeksforGeeks},
-year	 = {2022},
-url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
-}
-
-@article{ML-IBM,
-	author = {IBM},
-	title	 = {What is Machine Learning? | IBM},
-	year	 = {2022},
-	url	   = {https://www.ibm.com/cloud/learn/machine-learning}
-}
-
-@article{RBC-urmcrochester,
-author = {URMC rochester},
-title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
-year	 = {2022},
-url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
-}
-
-@article{SUDHA2020639,
-title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
-journal = {Biocybernetics and Biomedical Engineering},
-volume = {40},
-number = {2},
-pages = {639-648},
-year = {2020},
-issn = {0208-5216},
-doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
-url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
-author = {K. Sudha and P. Geetha},
-keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
-abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
-}
-
-@article{SSLvsRL-askanydifference,
-author = {askanydifference},
-title	 = {Difference Between Semi-Supervised and Reinforcement Learning (With Table)  – Ask Any Difference},
-year   = {2022},
-url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/}
-}
-
-@article{Steve_Eddins_2022_mathworks,
-	author	={Steve Eddins},
-	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB & Simulink},
-	year	={2022},
-	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html}
-	}
-
-@article{VGG-Gaudenz_Boesch,
-author = {Gaudenz Boesch},
-title  = {VGG Very Deep Convolutional Networks (VGGNet) - What you need to know - viso.ai},
-year   = {2022},
-url    = {https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/}
-}
-
-@article{WBC-clevelandclinic,
-author = {clevelandclinic},
-title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
-year	 = {2022},
-url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
-}
-
-@article{Zheng2018,
-  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
-  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
-  journal={Micron},
-  volume={107},
-  pages={55--71},
-  year={2018},
-  publisher={Elsevier},
-  doi={https://doi.org/10.1016/j.micron.2018.01.010},
-  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
-}
-
-@article{DBLP:journals/corr/abs-1802-10548,
+	}@article{DBLP:journals/corr/abs-1802-10548,
   author    = {Carlos X. Hern{\'{a}}ndez and
                Mohammad M. Sultan and
                Vijay S. Pande},
@@ -188,6 +47,19 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
   publisher={IEEE}
 }
 
+@article{AITypes-GeeksForGeeks,
+author = {GeeksForGeeks},
+title	 = {Supervised and Unsupervised learning - GeeksforGeeks},
+year	 = {2022},
+url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
+}
+@article{Annie_Stuart_What_2022_webmd,
+	author	={Annie Stuart What},
+	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
+	year	={2022},
+	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+}
+
 @article{badrinarayanan2017segnet,
   title={Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
   author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -197,6 +69,13 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
   pages={2481--2495},
   year={2017},
   publisher={IEEE}
+}
+
+@ONLINE {BCCD_Dataset,
+    author = "Shenggan",
+    title  = "BCCD Dataset",
+    year   = "2017",
+    url    = "https://github.com/Shenggan/BCCD_Dataset"
 }
 
 @article{bhavnani2016segmentation,
@@ -218,6 +97,13 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 	year 			= {1992}
 }
 
+@article{CBC-mayoclinic,
+author = {mayoclinic},
+title	 = {Complete blood count (CBC) - Mayo Clinic},
+year	 = {2022},
+url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
+}
+
 @article{2022_cellavision,
 	author	={cellavision},
 	title	={CellaVision News Blast – CellaVision AB},
@@ -235,6 +121,18 @@ author 	= {Wikipedia},
 title 	= {Circle Hough Transform - Wikipedia},
 year 		= {2022},
 url			= {https://en.wikipedia.org/wiki/Circle_Hough_Transform}
+}
+
+@article{CNN-IBM,
+	author	={IBM},
+	title	={What are Convolutional Neural Networks? | IBM},
+	year	={2020},
+	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
+	}@article{DG-ml-cheatsheet,
+author = {ml-cheatsheet},
+title	 = {Gradient Descent — ML Glossary documentation},
+year	 = {2022},
+url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html}
 }
 
 @article{digabel1978iterative,
@@ -302,6 +200,32 @@ year 			= {2000}
   year={2011}
 }
 
+@Article{Kouzehkanan2022,
+author={Kouzehkanan, Zahra Mousavi
+and Saghari, Sepehr
+and Tavakoli, Sajad
+and Rostami, Peyman
+and Abaszadeh, Mohammadjavad
+and Mirzadeh, Farzaneh
+and Satlsar, Esmaeil Shahabi
+and Gheidishahran, Maryam
+and Gorgi, Fatemeh
+and Mohammadi, Saeed
+and Hosseini, Reshad},
+title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
+journal={Scientific Reports},
+year={2022},
+month={Jan},
+day={21},
+volume={12},
+number={1},
+pages={1123},
+abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
+issn={2045-2322},
+doi={10.1038/s41598-021-04426-x},
+url={https://doi.org/10.1038/s41598-021-04426-x}
+}
+
 @inproceedings{labati2011all,
   title={All-IDB: The acute lymphoblastic leukemia image database for image processing},
   author={Labati, Ruggero Donida and Piuri, Vincenzo and Scotti, Fabio},
@@ -330,6 +254,13 @@ year 			= {2000}
   year={2012}
 }
 
+@article{LR-GeeksForGeeks,
+author = {LR-GeeksForGeeks},
+title	 = {ML | Linear Regression - GeeksforGeeks},
+year	 = {2022},
+url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
+}
+
 @inproceedings{maple2003geometric,
   title={Geometric design and space planning using the marching squares and marching cube algorithms},
   author={Maple, Carsten},
@@ -352,6 +283,13 @@ year 			= {2000}
   journal={IEEE transactions on pattern analysis and machine intelligence},
   year={2021},
   publisher={IEEE}
+}
+
+@article{ML-IBM,
+	author = {IBM},
+	title	 = {What is Machine Learning? | IBM},
+	year	 = {2022},
+	url	   = {https://www.ibm.com/cloud/learn/machine-learning}
 }
 
 @article{murphy1996finley,
@@ -434,6 +372,13 @@ year 		= {2007}
 	year = {2020}
 } 
 
+@article{RBC-urmcrochester,
+author = {URMC rochester},
+title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
+year	 = {2022},
+url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
+}
+
 @inproceedings{ronneberger2015u,
   title={U-net: Convolutional networks for biomedical image segmentation},
   author={Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
@@ -442,6 +387,21 @@ year 		= {2007}
   year={2015},
   organization={Springer}
 }
+@article{SUDHA2020639,
+title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
+journal = {Biocybernetics and Biomedical Engineering},
+volume = {40},
+number = {2},
+pages = {639-648},
+year = {2020},
+issn = {0208-5216},
+doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
+author = {K. Sudha and P. Geetha},
+keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
+abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+}
+
 @inproceedings{sarrafzadeh2014selection,
   title={Selection of the best features for leukocytes classification in blood smear microscopic images},
   author={Sarrafzadeh, Omid and Rabbani, Hossein and Talebi, Ardeshir and Banaem, Hossein Usefi},
@@ -468,10 +428,50 @@ year 		= {2007}
   year={2014}
 }
 
+@article{SSLvsRL-askanydifference,
+author = {askanydifference},
+title	 = {Difference Between Semi-Supervised and Reinforcement Learning (With Table)  – Ask Any Difference},
+year   = {2022},
+url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/}
+}
+
+@article{Steve_Eddins_2022_mathworks,
+	author	={Steve Eddins},
+	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB \& Simulink},
+	year	={2022},
+	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html}
+	}
+
 @article{tran2019blood,
   title={Blood cell count using deep learning semantic segmentation},
   author={Tran, Thanh and Minh, Lam Binh and Lee, Suk-Hwan and Kwon, Ki-Ryong},
   year={2019},
   publisher={Preprints}
+}
+
+@article{VGG-Gaudenz_Boesch,
+author = {Gaudenz Boesch},
+title  = {VGG Very Deep Convolutional Networks (VGGNet) - What you need to know - viso.ai},
+year   = {2022},
+url    = {https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/}
+}
+
+@article{WBC-clevelandclinic,
+author = {clevelandclinic},
+title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
+year	 = {2022},
+url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
+}
+
+@article{Zheng2018,
+  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
+  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
+  journal={Micron},
+  volume={107},
+  pages={55--71},
+  year={2018},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.micron.2018.01.010},
+  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
 }
 
