--- a/ressources/bibtex/Steve_Eddins_2022_mathworks.bib
+++ b/ressources/bibtex/Steve_Eddins_2022_mathworks.bib
@@ -1,6 +1,6 @@
 @article{Steve_Eddins_2022_mathworks,
 	author	={Steve Eddins},
-	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB & Simulink},
+	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB \& Simulink},
 	year	={2022},
 	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html}
 	}
