added cht scheme

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -16,7 +16,7 @@
 \vspace{0.2in}
 \hspace{\parindent}
 In this chapter, we will present artificial intelligence with all of its branches, and then dive deeper into convolutional neural networks (CNNs) and their layers. Finally, we will present some CNN architectures and image processing methods.
-
+Conclusion
 \section{Artificial Intelligence}
 \subsection{Definition}
 \hspace{\parindent}
