added chapter 4 conclusion!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -16,7 +16,7 @@
 \vspace{0.2in}
 \hspace{\parindent}
 In this chapter, we will present artificial intelligence with all of its branches, and then dive deeper into convolutional neural networks (CNNs) and their layers. Finally, we will present some CNN architectures and image processing methods.
-Conclusion
+
 \section{Artificial Intelligence}
 \subsection{Definition}
 \hspace{\parindent}
@@ -372,5 +372,7 @@ Marching squares takes a similar approach to the 3D marching cubes algorithm:
 \end{itemize}
 
 \section{Conclusion}
+In this chapter, we have presented artificial intelligence, machine learning and deep learning. Also, the latest CNN architectures where we did a deeper dive into U-Net and SegNet.
+Finally, we defined the different image processing methods which permitted us to count blood cells.
 
 \newpage
