--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -322,7 +322,7 @@ the equation for the discrete cosine transform is represented as:
 \subsection{Circular Hough Transform}
 \hspace{\parindent}
 The general Hough transform can be used on any kind of shape, although the complexity of the transformation increase with the number of parameters needed to describing the shape. \textsuperscript{\cite{pedersen2007circular}}
-The circle Hough Transform (CHT) is a basic feature extraction technique used in digital image processing for detecting circles in imperfect images.
+The Circle Hough Transform (CHT) is a basic feature extraction technique used in digital image processing for detecting circles in imperfect images.
 
 In a two-dimensional space, a circle can be described by:
 
