updated chapter 6 conclusion

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -207,6 +207,6 @@ Here are all the counting accuracies for each approach:
 
 \section{Conclusion}
 In conclusion, both models performed very well detecting and counting the blood cells, each one with its advantages and disadvantages.
-But the DO-UNet model outperformed SegNet because of the noise generating using SegNet.
+But the DO-UNet model outperformed SegNet because of the noise generated using SegNet, especially when it comes to platelets since they are very similiar to that noise.
 
 \newpage
