updated dataset section on chapter 5

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -78,7 +78,7 @@ We also tested 3 different loss functions (tversky loss, binary crossentropy and
     \caption{SegNet architecture}
 \end{figure}
 
-\subsection{Dataset}
+\section{Dataset}
 \hspace{\parindent}
 For both models, we have decided to use the ALL-IDB1 dataset, which contains 108 blood cell images, of which 10 images with their perspective masks and edge masks were chosen for red blood cell training and 3 as a test dataset, for white blood cells 73 images with their masks, and 33 as a test dataset.
 For platelets, we used 71 for training and 31 as a test dataset.
