--- a/PFE/latex/tables/table5.tex
+++ b/PFE/latex/tables/table5.tex
@@ -13,6 +13,6 @@
 \multicolumn{1}{|c|}{\multirow{-2}{*}{{\color[HTML]{000000} \textbf{Platelets}}}}         & {\color[HTML]{000000} \textbf{Mask}}  & {\color[HTML]{000000} 71}                                                              & {\color[HTML]{000000} 31}                                                             & {\color[HTML]{000000} 27650}                                                          & {\color[HTML]{000000} 14410}                                                         & {\color[HTML]{000000} 102}                                                             & {\color[HTML]{000000} \textbf{42060}}                                                 \\ \hline
 \end{tabular}%
 }
-\caption{Dataset used for segnet}
-\label{Dataset used for segnet}
+\caption{Dataset used for both models}
+\label{Dataset used for both models}
 \end{table}
