updated table captions!

--- a/PFE/latex/tables/RBC_DOUNET.tex
+++ b/PFE/latex/tables/RBC_DOUNET.tex
@@ -21,6 +21,6 @@ Im108\_0 & 510 & 511 & 418 & 546 & 99.80 & 81.96 & 92.94 \\
 \textbf{Total} &  &  &  &  & 90.43 & 78.66 & 95.36 \\
 \hline
 \end{tabular}
-\caption{RBC Counting results with 3 algorithms}
+\caption{RBC Counting results using 3 algorithms}
 \label{table:DOUNET-RBC}
 \end{table}
