--- a/PFE/latex/tables/WBC_DOUNET.tex
+++ b/PFE/latex/tables/WBC_DOUNET.tex
@@ -23,6 +23,6 @@ Im108\_0 & 4 & 4 & 5 & 4 & 100.00 & 75.00 & 100.00 \\
 \textbf{Total 108 images} &  &  &  &  & 95.64 & 51.68 & 85.76 \\
 \hline
 \end{tabular}}
-\caption{WBC Counting results with 3 algorithms}
+\caption{WBC Counting results using 3 algorithms}
 \label{table:UNet-WBC}
 \end{table}
