--- a/PFE/latex/tables/plt_segnet.tex
+++ b/PFE/latex/tables/plt_segnet.tex
@@ -20,6 +20,6 @@
 
 \hline
 \end{tabular}
-\caption{Results of plt segnet}
-\label{Results of plt segnet}
+\caption{Platelets counting results using 3 algorithms}
+\label{Platelets counting results using 3 algorithms}
 \end{table}
