--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -20,6 +20,6 @@
 
 \hline
 \end{tabular}
-\caption{Results of rbc segnet}
-\label{Results of rbc segnet}
+\caption{RBC counting results using 3 algorithms}
+\label{RBC counting results using 3 algorithms}
 \end{table}
