--- a/PFE/latex/tables/wbc_segnet.tex
+++ b/PFE/latex/tables/wbc_segnet.tex
@@ -20,6 +20,6 @@
 
 \hline
 \end{tabular}
-\caption{Results of wbc segnet}
-\label{Results of wbc segnet}
+\caption{WBC counting results using 3 algorithms}
+\label{WBC counting results using 3 algorithms}
 \end{table}
